2007-11-22    <Daddy@C-3PO>

	* lib/Test/Dir.pm: first release
