@@ -1,5 +1,5 @@
 
-# $Id: Makefile.PL,v 1.3 2007/11/22 22:35:12 Daddy Exp $
+# $Id: Makefile.PL,v 1.5 2008/01/20 23:06:36 Daddy Exp $
 
 use inc::Module::Install;
 
@@ -10,6 +10,9 @@ author   q{Martin 'Kingpin' Thurn <mthurn@cpan.org>}; # }}; # Emacs highlight bu
 requires 'Test::Builder';
 build_requires 'Test::Builder::Tester';
 build_requires 'Test::More';
+build_recommends('Pod::Coverage');
+build_recommends('Test::Pod');
+build_recommends('Test::Pod::Coverage');
 
 WriteAll;
 
